--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,31 +1,30 @@
-.topnav{
-
-
-
-}
 body{
-    background-image:url();
-    background: linear-gradient(180deg, rgba (116,0,0,0)0%,#740000 100%);
+    background-image:url(../img/diverse-friends-students-shoot.jpg);
+    background:linear-gradient(180deg,rgba(116,0,0,0)0%,#740000 100%);
+    background-size: 100% 100%;
 }
-h1,
-h3,
+h1{
+    font-size: medium;
+    text-align:center;
+    font-size: x-large;
+    color: #740000; 
+}
+
 h4{
     position: absolute;
     font-family: Lato;
     font-style: italic;
     font-weight: bold;
-    font-size: 96px;
+    font-size: large;
     line-height: 115px;
     text-align: center;
     color: #740000; 
 }
 #about{
-    position: absolute;
     font-family: Lato;
     font-style: italic;
     font-weight: bold;
-    font-size: 96px;
-    line-height: 115px;
+    font-size:x-large;
     text-align: center;
     color: #740000;
 }
@@ -39,32 +38,27 @@ h4{
     font-family: Lato;
     font-style: italic;
     font-weight: normal;
-    font-size: 48px;
+    font-size: medium;
     line-height: 55px;
     text-align: center;
     color: #FFFFFF;
 }
 p{
-    position: absolute;
-    width: 1189px;
-    height: 275px;
-    left: 113px;
-    top: 549px;
     font-family: Lato;
     font-style: italic;
     font-weight: normal;
-    font-size: 48px;
-    line-height: 55px;
-    text-align: center;
-    color: #FFFFFF;
+    font-size:medium;
+    text-align:center;
+    color: #740000;
+
 }
 
-.card-header{
+.card-content{
     position: absolute;
     font-family: Lato;
     font-style: italic;
     font-weight: bold;
-    font-size: 96px;
+    font-size: medium;
     line-height: 115px;
     text-align: center;
     color: #740000;
