--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,9 @@
+.container{
+    height:100vh;
+    background:linear-gradient(180deg,rgba(116,0,0,0)0%,#740000 100%);
+    background-size: 100% 100%;
+}
 body{
-    background-image:url(../img/diverse-friends-students-shoot.jpg);
     background:linear-gradient(180deg,rgba(116,0,0,0)0%,#740000 100%);
     background-size: 100% 100%;
 }
@@ -10,13 +14,12 @@ h1{
     color: #740000; 
 }
 h4{
-    position: absolute;
     font-family: Lato;
     font-style: italic;
     font-weight: bold;
     font-size: large;
     line-height: 115px;
-    text-align: center;
+    text-align: left;
     color: #740000; 
 }
 #about{
@@ -56,13 +59,13 @@ p{
 }
 
 .card-content{
-    position: absolute;
     font-family: Lato;
     font-style: italic;
     font-weight: bold;
     font-size: medium;
-    text-align: center;
+    text-align: left;
     color: #740000;
+    line-height: 10px;
 
 }
 
@@ -80,4 +83,3 @@ footer{
     color:#FFFFFF;
     position: absolute;
 }
-
