--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -63,7 +63,7 @@ p{
     font-style: italic;
     font-weight: bold;
     font-size: medium;
-    text-align: left;
+    text-align: center;
     color: #740000;
     line-height: 10px;
 
