--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -71,8 +71,8 @@ p {
     text-align: center;
     color: #740000;
     line-height: 10px;
-
-#feedback {
+}
+#feedback{
   text-align: center;
 }
 
