modifying interests color

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -68,7 +68,7 @@ p {
   font-weight: bold;
   font-size: medium;
   text-align: left;
-  color: #740000;
+  color: #ffffff;
   line-height: 10px;
 }
 
