--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,15 +3,22 @@
   background: linear-gradient(180deg, rgba(116, 0, 0, 0) 0%, #740000 100%);
   background-size: 100% 100%;
 }
+
 body {
+  background: url(../img/diverse-friends-students-shoot.jpg) no-repeat;
+  background-size: cover;
+}
+.main {
   background: linear-gradient(180deg, rgba(116, 0, 0, 0) 0%, #740000 100%);
   background-size: 100% 100%;
+  height: 100vh;
 }
 h1 {
   font-size: medium;
   text-align: center;
-  font-size: x-large;
-  color: #740000;
+  font-size: 50px;
+  color: #ffffff;
+  text-shadow: 1px 1px #000000;
 }
 h4 {
   font-family: Lato;
@@ -54,9 +61,10 @@ p {
   font-family: Lato;
   font-style: italic;
   font-weight: normal;
-  font-size: medium;
+  font-size: 32px;
   text-align: center;
-  color: #740000;
+  color: #ffffff;
+  text-shadow: 1px 1px #000000;
 }
 #flex1 {
   display: flex;
